Use a pixel max-width to prevent content jumping while the font is loading

--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,10 +1,10 @@
 .container {
-    max-width: min(60ch, 100% - 4rem);
+    max-width: min(750px, 100% - 4rem);
     margin-inline: auto;
 }
 
 .container-xl {
-    max-width: min(125ch, 100% - 4rem);
+    max-width: min(1600px, 100% - 4rem);
 }
 
 /* Photo Grid styles */
